# ibim-levelset

./: .gitignore  CMakeLists.txt  Config.cpp  README.md  bbfmm.h  blas_wrapper.cpp  blas_wrapper.h  electric.cpp  electric.h  electric_correction.cpp  electric_correction.h  gmres.cpp  gmres.h  lapacke_wrapper.cpp  lapacke_wrapper.h  levelset.cpp  levelset.h  linalg.cpp  linalg.h  ls_point.h  main.cpp  utils.h
contrib/: openblas.sh
contrib/include/: openblas_config.h
contrib/lib/cmake/openblas/: OpenBLASConfig.cmake
contrib/lib/pkgconfig/: openblas.pc
data/: 1ycq.pqr  1ycr.pqr  ball.pqr  input.cfg  twoball.pqr
weights/: alpha_all.txt
